# MindMatch

./: CNAME  README.md  main.py  pyproject.toml
website/: __init__.py  auth.py  database.db  views.py
website/static/: style.css
website/templates/: base.html  home.html  index.html  login.html  sign_up.html
