[tool.poetry]
name = "repl_python3_Mind-Match"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
flask-login = "^0.5.0"
flask-sqlalchemy = "^2.5.1"
sqlalchemy = "^1.4.15"
werkzeug = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
